2006-06-04  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tjc/tcl/lang/TJCBench.java: Add TclList
        basic operation tests.
        * tests/tclbench/compare.tcl: Calc time delta.
        * tests/tclbench/internal.bench:
        * tests/tclbench/loops.bench: Add tests for
        split command.

2006-06-03  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tjc/tcl/lang/TJCBench.java: Add Tcl Bench
        tests for internal APIs.
        * src/tjc/tcl/lang/TJCCommandCmd.java:
        * src/tjc/tcl/lang/TJCPackageCmd.java: Update
        class loading logic so that getClassByName()
        is used to load a Java class by name. This
        fixes support for inner class names.
        * tests/tclbench/internal.bench: Add internal
        benchmark tests for TJC and Expression modules.

2006-06-01  Mo DeJong  <mdejong@users.sourceforge.net>

        * tests/tclbench/invoke.bench: Run invoke_1_to_10_loop
        the default number of iterations. Running only 100
        iterations produced very confusing results that
        did not match from one run to the next.
        * tests/tclbench/jacl1+tjc.out: Removed.
        * tests/tclbench/jacl1.out: Removed.
        * tests/tclbench/jacl132.out: Removed.
        * tests/tclbench/libbench.tcl: Require that test
        result converge twice before stopping. Also, generate
        average of last 3 times as the result time instead
        of picking the smallest time. This gives a better
        average results for multiple runs.
        * tests/tclbench/tclsh8411.out: Removed.

2006-05-31  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Interp.java (eval, evalResource):
        Check for exception and raise proper error message
        in case Jacl is run in an applet.

2006-05-30  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tcljava/tcl/lang/TclString.java:
        Reimplement TclString so that a dummy
        ref is set inside the TclObject. This